# domain-checker

./: .env.example  .gitignore  PRD.md  README.md  docker-compose.yml  letshost_driftnest_direct.html  pyproject.toml
.github/workflows/: build-and-deploy.yml
domain-service/: DOMAIN_PIPELINE.md  Dockerfile  pyproject.toml
domain-service/src/: availability_parser.py  config.py  exceptions.py  main.py  models.py  request_runner.py  scraper.py
domain-service/src/adapters/: __init__.py  base.py  cloudflare.py  generic.py  godaddy.py  letshost.py  namecheap.py
domain-service/tests/: conftest.py  test_api.py  test_models.py  test_parser.py  test_parser_fixtures.py  test_registrar_catalog.py  test_request_runner.py  test_scraper.py
domain-service/tests/adapters/: test_cloudflare.py  test_godaddy.py  test_letshost.py  test_namecheap.py
kimi-orchestrator/: .gitignore  Dockerfile  openapi.yaml  package-lock.json  package.json  tsconfig.json
kimi-orchestrator/src/: app.ts  index.ts
kimi-orchestrator/src/prompts/: promptBuilder.ts
kimi-orchestrator/src/routes/: api.ts
kimi-orchestrator/src/services/: domainServiceAdapter.ts  kimiClient.ts  responseParser.ts
kimi-orchestrator/tests/: api.test.ts  promptBuilder.test.ts  responseParser.test.ts
nextjs-app/: Dockerfile  package-lock.json  package.json
nextjs-app/app/: globals.css  layout.tsx  page.tsx
nextjs-app/components/: Footer.tsx  SessionProvider.tsx  Stepper.tsx
nextjs-app/lib/: actions.ts  types.ts
src/: config.py  exceptions.py  models.py  scraper.py
tests/: conftest.py  test_api.py
(+19 files in other folders)
